--- a/dictionary-project/src/App.css
+++ b/dictionary-project/src/App.css
@@ -1,11 +1,12 @@
-.App {
-  text-align: left;
+body {
+  background: #f5f5f5;
 }
 
 .App logo {
   max-width: 400px;
   display: block;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .App-header {
