--- a/dictionary-project/src/Dictionary.css
+++ b/dictionary-project/src/Dictionary.css
@@ -1,4 +1,17 @@
 .Dictionary {
   padding: 20px;
-  background-color: rgb(176, 198, 220);
+}
+
+.Dictionary section {
+  background-color: rgb(39, 105, 130, 0.3);
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+  margin: 20px 0;
+}
+
+.Dictionary input {
+  width: 100%;
+  border-radius: 6px;
+  padding: 6px 10px;
 }
