--- a/dictionary-project/src/Dictionary.css
+++ b/dictionary-project/src/Dictionary.css
@@ -2,12 +2,19 @@
   padding: 20px;
 }
 
+.Dictionary h1 {
+  display: block;
+  font-size: 28px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
 .Dictionary section {
   background-color: rgb(39, 105, 130, 0.3);
-  padding: 30px;
+  padding: 40px;
   border-radius: 10px;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
-  margin: 20px 0;
+  margin-top: 10px;
 }
 
 .Dictionary input {
