--- a/dictionary-project/src/Meanings.css
+++ b/dictionary-project/src/Meanings.css
@@ -9,3 +9,9 @@
 .Meanings p::first-letter {
   text-transform: capitalize;
 }
+.Meanings .partOfSpeech {
+  font-size: 24px;
+  line-height: 1.5;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
